tests/NormalTests/paczka1/small_fuzzy/21184012.err
Error in line 3: Su05UaTu A714 38,9
Error in line 5: 2Si A714 55,4
